# PARP

./: .gitignore  README.md
Haskell/: Adventure.cabal  Adventure.hs  Character.hs  Combat.hs  Items.hs  Room.hs  State.hs  Utilites.hs  adventure.hs  compile.sh
Haskell/src/: Character.hs  Combat.hs  Doors.hs  ItemActions.hs  Items.hs  Main.hs  Room.hs  State.hs  Traps.hs  Utilites.hs
Prolog/: adventure.pl
Smalltalk/: adventure.st  ksawery.st  temp
