name:                Adventure
version:             0.1.0.0
author:              Jakub Robaczewski, Paweł Muller, Marianna Gromadzka
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Adventure
  main-is:             Main.hs
  other-modules:       Character Combat Items Room State Utilites
  build-depends:       base >=4.12 && <4.13, random >=1.2 && <1.3, process >=1.6 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
